# JUCECmakeRepoPrototype

./: CMakeLists.txt
Apps/: CMakeLists.txt
Apps/AudioAppTemplate/: CMakeLists.txt
Apps/AudioAppTemplate/Libs/BTrack/: BTrack.cpp
Apps/AudioAppTemplate/Source/: AudioSourceComponent.cpp  AudioSourceComponent.h  FlashBox.cpp  FlashBox.h  LogOutputComponent.cpp  LogOutputComponent.h  Logger.h  MainComponent.cpp  MainComponent.h  Math.h  OSCComponent.cpp  OSCComponent.h  Repeat.h  TempoAnalyserComponent.cpp  TempoAnalyserComponent.h  TempoSynthesizerComponent.cpp  TempoSynthesizerComponent.h
Apps/AudioAppTemplate/Source/BTrack/: OnsetDetectionFunction.h
Apps/audioprocessing-v2/: CMakeLists.txt  Main.cpp
Apps/audioprocessing-v2/Source/: AnalyserComponent.h  AudioInputSettingsComponent.h  AvvaOSCSender.h  FilePlayer.h  FilePlayerTransportComponent.h  LabelledSlider.cpp  LabelledSlider.h  Loudness.h  LoudnessAnalyser.cpp  LoudnessAnalyser.h  LoudnessAnalyserSettings.h  MainComponent.h  MainWindow.cpp  MainWindow.h  MovingAverage.h  MovingAverageTest.cpp  RemoteAddressComponent.h  StdoutLogger.h  TailOff.cpp  TailOff.h  ValueHistoryComponent.h  ValueShaper.h
Apps/audioprocessing-v2/Source/Components/: LabelledSlider.h
Apps/audioprocessing-v2/Source/Loudness/: Analyser.h  AnalyserComponent.h  Loudness.h  TailOff.h  TailOffTest.cpp  ValueHistoryComponent.h  ValueShaper.h
Apps/mbk/: CMakeLists.txt
Apps/mbk/Libs/BTrack/: BTrack.cpp  BTrack.h
Apps/mbk/Source/: AudioSourceComponent.cpp  AudioSourceComponent.h  AvvaOSCSender.cpp  AvvaOSCSender.h  CommonHeader.h  FlashBox.cpp  FlashBox.h  LogOutputComponent.cpp  LogOutputComponent.h  Logger.h  Main.cpp  MainComponent.cpp  MainComponent.h  MultiLogger.cpp  OSCComponent.cpp  OSCComponent.h  OSCSender.h  StdoutLogger.cpp  StdoutLogger.h  TempoAnalyserComponent.cpp  TempoAnalyserComponent.h  TempoSynthesizerComponent.cpp  TempoSynthesizerComponent.h  prettyprint.hpp
Apps/mbk/Source/Beat/: AnalyserComponent.cpp  AnalyserComponent.h  SynthesizerComponent.cpp  SynthesizerComponent.h
Apps/mbk/Source/Components/: FlashBox.h  LabelledSlider.cpp  LabelledSlider.h  LogOutputComponent.cpp  LogOutputComponent.h
Apps/mbk/Source/Logger/: Logger.h  MultiLogger.cpp  MultiLogger.h  StdoutLogger.cpp  StdoutLogger.h
Apps/mbk/Source/Loudness/: Analyser.cpp  Analyser.h  AnalyserComponent.h  AnalyserSettings.h  MovingAverage.h  TailOff.cpp  TailOff.h  ValueHistoryComponent.h  ValueShaper.h
Apps/mbk/docs/: 2024_q4_fresh_windows_install.md  Compile and run issues.md  Setting up BTrack on Windows.md  confliting_machine_type.md  strange_exit_code.md
CMake/: Findjuce.cmake
Modules/custom_module_test/Source/: DummyLabel.cpp
